# gfloat

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  BUILDING.md  ChangeLog  LICENSE  README.md  package.sh  pyproject.toml  requirements-dev.txt  requirements-direct.txt  requirements-docs.txt  requirements-test.txt  requirements.txt
.github/workflows/: ci.yaml
docs/: requirements-rtd.txt  requirements.txt
docs/source/: 01-decode.ipynb  02-value-stats.ipynb  03-value-tables.ipynb  04-benchmark.ipynb  05-speed.ipynb  05-stochastic-rounding.ipynb  api.rst  conf.py  formats.rst  index.rst  notebooks.rst  utils.py
etc/: check-copyright.sh  linux-386.Dockerfile  linux-container.Dockerfile  package.sh  test-check-copyright.sh  test-linux-386.sh  test-linux-arm32.sh  test-linux-container.sh
notebooks/: 01-decode.ipynb
src/gfloat/: __init__.py  block.py  cast.py  decode.py  decode_core.py  decode_ndarray.py  encode.py  encode_ndarray.py  formats.py  printing.py  round.py  round_ndarray.py  types.py
test/: conftest.py  test_array_api.py  test_block.py  test_decode.py  test_encode.py  test_finfo.py  test_jax.py  test_microxcaling.py  test_p3109_spec.py  test_printing.py  test_round.py  test_torch.py
tmp/: 05-speed.ipynb
